@@ -1,11 +1,63 @@
-@comment $NetBSD: PLIST,v 1.4 2004/03/08 22:15:30 jmmv Exp $
+@comment $NetBSD: PLIST,v 1.5 2004/07/25 14:00:21 minskim Exp $
 bin/amule
 bin/amulecmd
 bin/amulecmdDLG
 bin/amuleweb
 bin/amulewebDLG
 bin/ed2k
+share/amuleweb/aMule.tmpl
+share/amuleweb/webserver/GraphCon.gif
+share/amuleweb/webserver/GraphDL.gif
+share/amuleweb/webserver/GraphUL.gif
+share/amuleweb/webserver/add_server.gif
+share/amuleweb/webserver/arrow_down.gif
+share/amuleweb/webserver/arrow_right.gif
+share/amuleweb/webserver/arrow_up.gif
+share/amuleweb/webserver/black.gif
+share/amuleweb/webserver/blue.gif
+share/amuleweb/webserver/blue1.gif
+share/amuleweb/webserver/blue2.gif
+share/amuleweb/webserver/blue3.gif
+share/amuleweb/webserver/blue4.gif
+share/amuleweb/webserver/blue5.gif
+share/amuleweb/webserver/blue6.gif
+share/amuleweb/webserver/cp_download.gif
+share/amuleweb/webserver/cp_kad.gif
+share/amuleweb/webserver/cp_search.gif
+share/amuleweb/webserver/cp_servers.gif
+share/amuleweb/webserver/cp_settings.gif
+share/amuleweb/webserver/cp_shared.gif
+share/amuleweb/webserver/cp_stats.gif
+share/amuleweb/webserver/emule.gif
+share/amuleweb/webserver/green.gif
+share/amuleweb/webserver/greenpercent.gif
+share/amuleweb/webserver/l_cancel.gif
+share/amuleweb/webserver/l_connect.gif
+share/amuleweb/webserver/l_down.gif
+share/amuleweb/webserver/l_ed2klink.gif
+share/amuleweb/webserver/l_info.gif
+share/amuleweb/webserver/l_pause.gif
+share/amuleweb/webserver/l_resume.gif
+share/amuleweb/webserver/l_up.gif
+share/amuleweb/webserver/log.gif
+share/amuleweb/webserver/main_bg.gif
+share/amuleweb/webserver/main_top_bg.gif
+share/amuleweb/webserver/red.gif
+share/amuleweb/webserver/top_bar_bg.gif
+share/amuleweb/webserver/top_bar_bg2.gif
+share/amuleweb/webserver/transparent.gif
+share/amuleweb/webserver/yellow.gif
 share/applications/amule.desktop
+share/doc/aMule-${PKGVERSION}/ABOUT-NLS
+share/doc/aMule-${PKGVERSION}/AUTHORS
+share/doc/aMule-${PKGVERSION}/Changelog
+share/doc/aMule-${PKGVERSION}/ED2K-Links.HOWTO
+share/doc/aMule-${PKGVERSION}/INSTALL
+share/doc/aMule-${PKGVERSION}/README
+share/doc/aMule-${PKGVERSION}/TODO
+share/doc/aMule-${PKGVERSION}/amulesig.txt
+share/doc/aMule-${PKGVERSION}/eMule-Imports-Status
+share/doc/aMule-${PKGVERSION}/license.txt
 ${PKGLOCALEDIR}/locale/bg/LC_MESSAGES/amule.mo
 ${PKGLOCALEDIR}/locale/de/LC_MESSAGES/amule.mo
 ${PKGLOCALEDIR}/locale/ee/LC_MESSAGES/amule.mo
@@ -23,4 +75,7 @@ ${PKGLOCALEDIR}/locale/pt_BR/LC_MESSAGES/amule.mo
 ${PKGLOCALEDIR}/locale/ru/LC_MESSAGES/amule.mo
 share/pixmaps/amule.xpm
 @comment in xdg-dirs: @dirrm share/pixmaps
+@dirrm share/doc/aMule-${PKGVERSION}
 @comment in xdg-dirs: @dirrm share/applications
+@dirrm share/amuleweb/webserver
+@dirrm share/amuleweb
